Fixed issue with page card sizes not being constrained and mobile alignment issues

--- a/src/app/category/components/category-detail/category-detail.component.css
+++ b/src/app/category/components/category-detail/category-detail.component.css
@@ -19,14 +19,19 @@ p.body {
 }
 
 
-/* Cards */
+/* Page Cards */
 .page-cards-section {
     background-color: var(--cloud);
-    padding: 7rem 0;
+    /*padding: 7rem 0;*/
 }
 
 .page-cards-section > .container-fluid {
-    margin: 0 7rem;
+    /*margin: 0 7rem;*/
+}
+
+img.page-card-img {
+    max-width: 100%;
+    max-height: 100%;
 }
 
 .card-img-page-caption {
@@ -34,10 +39,54 @@ p.body {
     border-top-right-radius: calc(.25rem - 1px);
 }
 
+/* Text Image Overlay */
+.page-caption {
+    position: relative;
+    padding: 0;
+    margin: 0;
+}
+
+.page-caption > img.category {
+    display: block;
+    width: 100%;
+    height: auto;
+}
+
+.page-caption:after {
+    content: "";
+    position: absolute;
+    display: block;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0) linear-gradient(to bottom, rgba(0, 0, 0, 0) 0px, var(--gum-rgb) 100%) repeat 0 0;
+    z-index: 1;
+}
+
+.page-caption-text {
+    font-family: var(--sans-serif-bold);
+    font-size: 2rem;
+    display: block;
+    position: absolute;
+    width: auto;
+    color: #fff;
+    left: 0;
+    bottom: 0;
+    padding: 1em;
+    z-index: 2;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    white-space: pre-wrap;
+    max-width: 300px;
+    line-height: 2.2rem;
+}
+
+
 /* Rebate Cards */
 h1.rebate-title {
     text-align: center;
-    margin-bottom: 3rem;
+    margin: 3rem 0;
     font-family: var(--sans-serif-bold);
 }
 
@@ -79,48 +128,7 @@ h4.rebate-text {
     padding-top: 0.5rem;
 }
 
-/* Text Image Overlay */
-.page-caption {
-    position: relative;
-    padding: 0;
-    margin: 0;
-}
 
-.page-caption > img.category {
-    display: block;
-    width: 100%;
-    height: auto;
-}
-
-.page-caption:after {
-    content: "";
-    position: absolute;
-    display: block;
-    left: 0;
-    top: 0;
-    width: 300px;
-    height: 100%;
-    background: rgba(0, 0, 0, 0) linear-gradient(to bottom, rgba(0, 0, 0, 0) 0px, var(--gum-rgb) 100%) repeat 0 0;
-    z-index: 1;
-}
-
-.page-caption-text {
-    font-family: var(--sans-serif-bold);
-    font-size: 2rem;
-    display: block;
-    position: absolute;
-    width: auto;
-    color: #fff;
-    left: 0;
-    bottom: 0;
-    padding: 1em;
-    z-index: 2;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-    white-space: pre-wrap;
-    max-width: 300px;
-    line-height: 2.2rem;
-}
 
 /* Mobile */
 @media (max-width: 769px) {
@@ -173,7 +181,7 @@ h4.rebate-text {
         display: block;
         left: 0;
         top: 0;
-        width: 300px;
+        width: 100%;
         height: 100%;
         background: rgba(0, 0, 0, 0) linear-gradient(to bottom, rgba(0, 0, 0, 0) 0px, var(--gum-rgb) 100%) repeat 0 0;
         z-index: 1;
@@ -193,7 +201,7 @@ h4.rebate-text {
         -webkit-box-sizing: border-box;
         box-sizing: border-box;
         white-space: pre-wrap;
-        max-width: 300px;
+        max-width: 70%;
         line-height: 2.2rem;
     }
 
